fixed navbar issue on mobile making screen too wide

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -222,6 +222,7 @@ h2 {
     color: #00c5ff !important;
     padding: 0px !important;
     max-width: 350px;
+    margin-right: 15px;
   }
 }
 
